# CardiacZ

./: .gitignore  README.md  compose.yaml  env.example  package-lock.json  package.json  pyproject.toml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  src.App.tsx  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  i18n.ts  main.tsx
frontend/src/locales/en/: translation.json
frontend/src/locales/th/: translation.json
