[tool.poetry]
name = "heartcheck"
version = "0.1.0"
description = ""
authors = ["rojsak <rojsak.kritsuthikul@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.1"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
python-multipart = "^0.0.9"
tensorflow = "^2.17"
scikit-learn = "^1.5"
pandas = "^2.2"
pydub = "^0.25"
matplotlib = "^3.9"
librosa = "^0.10"
openai = "^0.27.8"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


