[tool.poetry]
name = "cardiacz-backend"
version = "0.1.0"
description = "Backend for the CardiacZ application"
authors = ["rojsak <rojsak.kritsuthikul@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
absl-py = "2.1.0"
accelerate = "0.33.0"
aenum = "3.1.15"
aiofiles = "23.2.1"
aiohappyeyeballs = "2.4.0"
aiohttp = "3.10.5"
aioice = "0.9.0"
aiortc = "1.9.0"
aiosignal = "1.3.1"
altair = "5.4.0"
annotated-types = "0.7.0"
antlr4-python3-runtime = "4.9.3"
anyio = "4.4.0"
argon2-cffi = "23.1.0"
argon2-cffi-bindings = "21.2.0"
arrow = "1.3.0"
asttokens = "2.4.1"
astunparse = "1.6.3"
async-lru = "2.0.4"
attrs = "24.2.0"
audioread = "3.0.1"
av = "12.3.0"
babel = "2.16.0"
barcode = "1.0.4"
beautifulsoup4 = "4.12.3"
bitarray = "2.9.2"
bleach = "6.1.0"
blinker = "1.8.2"
blobfile = "2.1.1"
build = "1.2.2.post1"
CacheControl = "0.14.2"
cachetools = "5.4.0"
carvekit_colab = "4.1.2"
certifi = "2024.7.4"
cffi = "1.17.0"
chardet = "5.2.0"
charset-normalizer = "3.3.2"
cleo = "2.1.0"
click = "8.1.7"
cloudinary = "1.41.0"
colorama = "0.4.6"
comm = "0.2.2"
contourpy = "1.2.1"
crashtest = "0.4.1"
cryptography = "43.0.0"
cycler = "0.12.1"
datasets = "3.2.0"
dearpygui = "1.11.1"
debugpy = "1.8.5"
debugpy-run = "1.12"
decorator = "4.4.2"
defusedxml = "0.7.1"
Deprecated = "1.2.14"
diffusers = "0.30.1"
dill = "0.3.8"
distlib = "0.3.8"
dnspython = "2.6.1"
docutils = "0.21.2"
dulwich = "0.22.7"
einops = "0.8.0"
et-xmlfile = "1.1.0"
evaluate = "0.4.3"
executing = "2.0.1"
fastapi = "0.112.0"
fastjsonschema = "2.20.0"
feedparser = "6.0.11"
ffmpeg = "1.4"
ffmpeg-python = "0.2.0"
ffmpy = "0.4.0"
filelock = "3.15.4"
fire = "0.6.0"
Flask = "3.0.3"
flatbuffers = "24.3.25"
fonttools = "4.53.1"
fqdn = "1.5.1"
frozenlist = "1.4.1"
fsspec = "2024.6.1"
ftfy = "6.2.3"
future = "1.0.0"
gast = "0.6.0"
gdown = "5.2.0"
gitdb = "4.0.11"
GitPython = "3.1.43"
google-ai-generativelanguage = "0.6.15"
google-api-core = "2.24.0"
google-api-python-client = "2.164.0"
google-auth = "2.37.0"
google-auth-httplib2 = "0.2.0"
google-cloud-core = "2.4.1"
google-cloud-speech = "2.30.0"
google-cloud-storage = "2.19.0"
google-crc32c = "1.5.0"
google-generativeai = "0.8.4"
google-pasta = "0.2.0"
google-resumable-media = "2.7.2"
googleapis-common-protos = "1.66.0"
gradio = "4.41.0"
gradio_client = "1.3.0"
grpcio = "1.69.0"
grpcio-status = "1.62.3"
h11 = "0.14.0"
h5py = "3.11.0"
httpcore = "1.0.5"
httplib2 = "0.22.0"
httpx = "0.27.0"
huggingface-hub = "0.24.5"
humanize = "4.10.0"
idna = "3.7"
ifaddr = "0.2.0"
imageio = "2.35.0"
imageio-ffmpeg = "0.5.1"
importlib-metadata = "6.11.0"
importlib_resources = "6.4.2"
installer = "0.7.0"
intel-openmp = "2021.4.0"
ipykernel = "6.29.5"
ipython = "8.26.0"
ipywidgets = "8.1.3"
iso8601 = "2.1.0"
isoduration = "20.11.0"
itsdangerous = "2.2.0"
jaraco.classes = "3.4.0"
jaraco.context = "6.0.1"
jaraco.functools = "4.1.0"
jedi = "0.19.1"
Jinja2 = "3.1.4"
joblib = "1.4.2"
json5 = "0.9.25"
jsonpointer = "3.0.0"
jsonschema = "4.23.0"
jsonschema-specifications = "2023.12.1"
jupyter-events = "0.10.0"
jupyter-lsp = "2.2.5"
jupyter_client = "8.6.2"
jupyter_core = "5.7.2"
jupyter_server = "2.14.2"
jupyter_server_terminals = "0.5.3"
jupyterlab = "4.2.4"
jupyterlab_pygments = "0.3.0"
jupyterlab_server = "2.27.3"
jupyterlab_widgets = "3.0.11"
keras = "3.4.1"
Keras-Applications = "1.0.8"
Keras-Preprocessing = "1.1.2"
keyring = "25.6.0"
kiwisolver = "1.4.5"
kornia = "0.7.3"
kornia_rs = "0.1.5"
lazy_loader = "0.4"
Levenshtein = "0.26.1"
libclang = "18.1.1"
librosa = "0.10.2.post1"
lightning = "2.5.0.post0"
lightning-utilities = "0.11.6"
line-bot-sdk = "3.13.0"
llvmlite = "0.43.0"
loguru = "0.7.2"
lxml = "4.9.4"
Markdown = "3.6"
markdown-it-py = "3.0.0"
MarkupSafe = "2.1.5"
matplotlib = "3.9.2"
matplotlib-inline = "0.1.7"
mdurl = "0.1.2"
mistune = "3.0.2"
mkl = "2021.4.0"
ml-dtypes = "0.4.0"
more-itertools = "10.6.0"
moviepy = "1.0.3"
mp3stego-lib = "1.1.7"
mpmath = "1.3.0"
msgpack = "1.1.0"
multidict = "6.0.5"
multiprocess = "0.70.16"
namex = "0.0.8"
narwhals = "1.4.2"
nbclient = "0.10.0"
nbconvert = "7.16.4"
nbformat = "5.10.4"
nest-asyncio = "1.6.0"
networkx = "3.3"
ngrok = "1.4.0"
ninja = "1.11.1.3"
notebook = "7.2.1"
notebook_shim = "0.2.4"
numba = "0.60.0"
numpy = "1.26.4"
omegaconf = "2.3.0"
openai-whisper = "20240930"
opencv-python = "4.11.0.86"
opencv-python-headless = "4.11.0.86"
openpyxl = "3.1.5"
opt-einsum = "3.3.0"
optree = "0.12.1"
orjson = "3.10.7"
overrides = "7.7.0"
packaging = "24.2"
pandas = "2.2.2"
pandocfilters = "1.5.1"
parso = "0.8.4"
pdfminer.six = "20231228"
pdfplumber = "0.11.5"
pillow = "11.1.0"
pipdeptree = "2.25.0"
pipenv = "2024.0.3"
pkginfo = "1.12.0"
platformdirs = "4.2.2"
plotly = "5.24.1"
plyfile = "1.1"
pooch = "1.8.2"
proglog = "0.1.10"
prometheus_client = "0.20.0"
prompt_toolkit = "3.0.47"
proto-plus = "1.25.0"
protobuf = "4.25.5"
psutil = "6.0.0"
pure_eval = "0.2.3"
py-cpuinfo = "9.0.0"
pyarrow = "17.0.0"
pyasn1 = "0.6.1"
pyasn1_modules = "0.4.1"
pycparser = "2.22"
pycryptodomex = "3.20.0"
pydantic = "2.8.2"
pydantic_core = "2.20.1"
pydeck = "0.9.1"
pydub = "0.25.1"
pyee = "11.1.0"
Pygments = "2.18.0"
pylibsrtp = "0.10.0"
PyMCubes = "0.1.6"
pymeshlab = "2023.12.post1"
Pympler = "1.1"
PyMuPDF = "1.25.5"
pyngrok = "7.2.0"
pyOpenSSL = "24.2.1"
pyparsing = "3.1.2"
PyPDF2 = "3.0.1"
pypdfium2 = "4.30.1"
pyproject_hooks = "1.2.0"
PySocks = "1.7.1"
pytesseract = "0.3.13"
pythainlp = "5.0.5"
python-barcode = "0.15.1"
python-dateutil = "2.9.0.post0"
python-json-logger = "2.0.7"
python-Levenshtein = "0.26.1"
python-multipart = "0.0.9"
pytorch-lightning = "2.4.0"
pytz = "2024.1"
pytz-deprecation-shim = "0.1.0.post0"
pywin32 = "306"
pywin32-ctypes = "0.2.3"
pywinpty = "2.0.13"
PyYAML = "6.0.2"
pyzbar = "0.1.9"
pyzmq = "26.1.0"
qrdet = "2.5"
qreader = "3.14"
quadrilateral-fitter = "1.12"
RapidFuzz = "3.11.0"
reader = "3.14"
referencing = "0.35.1"
regex = "2024.7.24"
reportlab = "4.2.2"
requests = "2.32.3"
requests-toolbelt = "1.0.0"
rfc3339-validator = "0.1.4"
rfc3986-validator = "0.1.1"
rich = "13.7.1"
rpds-py = "0.20.0"
rsa = "4.9"
ruff = "0.6.1"
safetensors = "0.4.4"
scikit-image = "0.24.0"
scikit-learn = "1.5.1"
scipy = "1.14.0"
seaborn = "0.13.2"
semantic-version = "2.10.0"
Send2Trash = "1.8.3"
sentencepiece = "0.2.0"
seqeval = "1.2.2"
setuptools = "72.1.0"
setuptools-rust = "1.10.2"
sgmllib3k = "1.0.0"
shapely = "2.0.6"
shellingham = "1.5.4"
six = "1.16.0"
smmap = "5.0.1"
sniffio = "1.3.1"
sockets = "1.0.0"
soundfile = "0.13.0"
soupsieve = "2.5"
soxr = "0.5.0.post1"
SpeechRecognition = "3.14.0"
srt = "3.5.3"
stack-data = "0.6.3"
starlette = "0.37.2"
streamlit = "1.41.1"
streamlit-webrtc = "0.47.7"
sympy = "1.13.1"
taming-transformers-rom1504 = "0.0.6"
tbb = "2021.13.1"
tenacity = "8.5.0"
tensorboard = "2.17.0"
tensorboard-data-server = "0.7.2"
tensorboardX = "2.6.2.2"
tensorflow = "2.17.0"
tensorflow-intel = "2.17.0"
termcolor = "2.4.0"
terminado = "0.18.1"
thop = "0.1.1.post2209072238"
threadpoolctl = "3.5.0"
tifffile = "2024.8.10"
tiktoken = "0.8.0"
timm = "1.0.9"
tinycss2 = "1.3.0"
tokenizers = "0.19.1"
toml = "0.10.2"
tomlkit = "0.12.0"
torch = "2.3.1+cu118"
torch-ema = "0.3"
torchaudio = "2.3.1+cu118"
torchmetrics = "1.4.1"
torchvision = "0.18.1+cu118"
tornado = "6.4.1"
tqdm = "4.66.4"
traitlets = "5.14.3"
transformers = "4.44.2"
trimesh = "4.4.7"
trove-classifiers = "2025.1.15.22"
typer = "0.12.4"
types-python-dateutil = "2.9.0.20240316"
typing_extensions = "4.12.2"
tzdata = "2024.1"
tzlocal = "4.3.1"
ultralytics = "8.2.89"
ultralytics-thop = "2.0.6"
uri-template = "1.3.0"
uritemplate = "4.1.1"
urllib3 = "2.3.0"
uvicorn = "0.30.5"
validators = "0.33.0"
virtualenv = "20.29.1"
vosk = "0.3.45"
watchdog = "4.0.1"
wcwidth = "0.2.13"
webcolors = "24.8.0"
webencodings = "0.5.1"
websocket-client = "1.8.0"
websockets = "12.0"
Werkzeug = "3.0.3"
wheel = "0.44.0"
whisper = "1.1.10"
widgetsnbextension = "4.0.11"
win32-setctime = "1.1.0"
wrangler = "0.1.8.6"
wrapt = "1.16.0"
xatlas = "0.0.9"
xxhash = "3.5.0"
yarl = "1.9.4"
zipp = "3.20.0"
openai = "^1.12.0"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^23.0.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 